first and initial commit with lot of updated

--- a/src/style.css
+++ b/src/style.css
@@ -54,12 +54,12 @@
   --fontSize-5: 2.074rem;
   --fontSize-6: 2.488rem;
   --fontSize-7: 2.986rem;
-  --color-primary: #005b99;
-  --color-text: #2e353f;
-  --color-text-light: #4f5969;
-  --color-heading: #1a202c;
-  --color-heading-black: black;
-  --color-accent: #d1dce5;
+  --color-primary: #1c1fd4;
+  --color-text: #24c22c;
+  --color-text-light: #f0da12;
+  --color-heading: #0e0b64;
+  --color-heading-black: rgb(0, 0, 0);
+  --color-accent: #cebaba;
 }
 
 /* HTML elements */
